--- a/QuestTemplates/daily-template/farming/package.yml
+++ b/QuestTemplates/daily-template/farming/package.yml
@@ -4,7 +4,7 @@ package:
 
 objectives:
   collect: 'block $target_slug$$age$ -$objective_amount$ conditions:worldCheck events:shrineStartFolder notify'
-  shrine: 'chestput $shrineLocation$ $target$:$objective_amount$ events:finishFolder notify'
+  shrine: 'chestput $shrineLocation$ $target_drops_slug$:$objective_amount$ events:finishFolder notify'
 
 variables:
   type_upper: Farming
